Bugs, Refactor, Features
* Show rarity of item in shop-detail and inventory
* Show Weapons as either 1H or 2H in shop and inventory and show Level
* fixed bug where HP shows as NaN/900
* remove deprecated mongoose-q
* Indicate items that you dont own in shop

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -213,7 +213,8 @@
 }
 
 .item-padding {
-  padding: 10px 25px;
+  padding: 10px 50px;
+  /* top and bottom are 10px, left and right are 25px*/
 }
 
 /* END LIST SCREEN */
